--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -5,10 +5,12 @@ on: [ push, pull_request ]
 jobs:
   check:
     runs-on: ${{ matrix.os }}
+    env:
+      CI_MP: 1
 
     strategy:
       matrix:
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
+        os: [ ubuntu-latest, macos-11, windows-latest ]
 
     steps:
       - uses: actions/checkout@v2
@@ -29,25 +31,26 @@ jobs:
         with:
           java-version: 1.8
 
-      - run: CI_MP=1 ./gradlew linuxX64Test
+      - run: ./gradlew linuxX64Test
         if: matrix.os == 'ubuntu-latest'
 
-      - run: CI_MP=1 ./gradlew mingwX64Test
+      - run: ./gradlew mingwX64Test
         if: matrix.os == 'windows-latest'
 
-      - run: CI_MP=1 ./gradlew check
-        if: matrix.os == 'macos-latest'
+      - run: ./gradlew check
+        if: matrix.os == 'macos-11'
 
   publish:
     needs: check
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push' # && needs.check.result == 'success'
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push' && needs.check.result == 'success'
     runs-on: ${{ matrix.os }}
 
     strategy:
       matrix:
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
+        os: [ ubuntu-latest, macos-11, windows-latest ]
 
     env:
+      CI_MP: 1
       ORG_GRADLE_PROJECT_ossrhUsername: ${{ secrets.OSSRH_USERNAME }}
       ORG_GRADLE_PROJECT_ossrhPassword: ${{ secrets.OSSRH_PASSWORD }}
       ORG_GRADLE_PROJECT_signingKeyId: ${{ secrets.SIGNING_KEY_ID }}
@@ -79,8 +82,10 @@ jobs:
       - run: CI_MP=1 ./gradlew publishLinuxArm64PublicationToMavenRepository
         if: matrix.os == 'ubuntu-latest'
 
-      - run: CI_MP=1 ./gradlew publishMingwX64PublicationToMavenRepository
+      - run: |
+          SET CI_MP=1 
+          ./gradlew publishMingwX64PublicationToMavenRepository
         if: matrix.os == 'windows-latest'
 
       - run: CI_MP=1 ./gradlew publish
-        if: matrix.os == 'macos-latest'
+        if: matrix.os == 'macos-11'
